--- a/actual_report/refs.bib
+++ b/actual_report/refs.bib
@@ -14,6 +14,64 @@
 
 % MY INTRO REFS
 
+% deep learning og
+@article{dlog,
+  title     = {Learning while searching in constraint-satisfaction problems},
+  author    = {Dechter, Rina},
+  year      = {1986},
+  publisher = {University of California, Computer Science Department, Cognitive Systems~…}
+}
+
+
+
+% deep leaerning theory
+@article{dl1,
+  title     = {Deep learning},
+  author    = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal   = {nature},
+  volume    = {521},
+  number    = {7553},
+  pages     = {436--444},
+  year      = {2015},
+  publisher = {Nature Publishing Group}
+}
+
+
+
+% LIGO - KAGRA - JAPAN
+@article{kagra,
+  title     = {KAGRA: 2.5 generation interferometric gravitational wave detector},
+  volume    = {3},
+  issn      = {2397-3366},
+  url       = {http://dx.doi.org/10.1038/s41550-018-0658-y},
+  doi       = {10.1038/s41550-018-0658-y},
+  number    = {1},
+  journal   = {Nature Astronomy},
+  publisher = {Springer Science and Business Media LLC},
+  year      = {2019},
+  month     = {Jan},
+  pages     = {35–40}
+}
+
+
+% LIGO INDIA
+@article{UNNIKRISHNAN_2013,
+  title     = {IndIGO AND LIGO-INDIA: SCOPE AND PLANS FOR GRAVITATIONAL WAVE RESEARCH AND PRECISION METROLOGY IN INDIA},
+  volume    = {22},
+  issn      = {1793-6594},
+  url       = {http://dx.doi.org/10.1142/S0218271813410101},
+  doi       = {10.1142/s0218271813410101},
+  number    = {01},
+  journal   = {International Journal of Modern Physics D},
+  publisher = {World Scientific Pub Co Pte Lt},
+  author    = {UNNIKRISHNAN, C. S.},
+  year      = {2013},
+  month     = {Jan},
+  pages     = {1341010}
+}
+
+
+
 % OG MCMC
 
 @article{mcmc_og,
@@ -84,7 +142,7 @@
   school = {The Chinese University of Hong Kong}
 }
 
-& nessai
+% nessai
 @article{williams2021nested,
   title   = {Nested Sampling with Normalising Flows for Gravitational-Wave Inference},
   author  = {Williams, Michael J and Veitch, John and Messenger, Chris},
